<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, JPush!</string>
    <string name="app_name">MyNews</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="guide_content">马上体验 GO→</string>
    <string name="search_edittext">请输入搜索内容</string>
    <string name="hours24">24小时要闻</string>
    <string name="login_name">网易邮箱/手机号</string>
    <string name="login_num">密码</string>
    <string name="login_log">登陆</string>
    <string name="login_wx">微信账号登录</string>
    <string name="login_wb">微博账号登录</string>
    <string name="login_qq">QQ账号登录</string>
    <string name="login_mei">没有账号？</string>
    <string name="login_zc">注册网易邮箱</string>
    <string name="weather_hum">湿度</string>
    <string name="weather_pres">气压</string>
    <string name="weather_dl">大连</string>
    <string name="weather_shenghuo">生活指南</string>
    <string name="app_temperature">26</string>
    <string name="app_maxTemperature">26</string>
    <string name="app_minTemperature">1</string>
    <string name="app_windPower">风力</string>
    <string name="app_windDirection">风向</string>
    <string name="weather_fenglidengji">风力等级:</string>
    <string name="nemu_name">立即登陆</string>
    <string name="menu_setup">设置</string>
    <string name="menu_update">更新</string>
    <!-- JPush SDK Demo-->
</resources>
